--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="http://muslin.in/">Everything you need to know<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://www.instagram.com/jaagirlodgedudhwa/">
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.instagram.com/muslinhomedecor/">Social Media</a>
+        <a class="nav-link" href="https://www.instagram.com/jaagirlodgedudhwa/"></a>
       </li>
 
       
@@ -39,8 +39,8 @@
   					<img class="card-img-top" src="https://ui.cltpstatic.com/places/hotels/7534/753444/images/2_w.jpg" alt="Card image cap">
   					<div class="card-body">
 					    <h5 class="card-title">Jaagir Lodge</h5>
-					    <p class="card-text">The first Sanderson fabric range of printed cottons was produced in 1919. The Sanderson range of designer fabrics today includes printed designs on cotton, linen and silk, together with jacquard and dobby weaves, embroideries, sheers and a wide range of plains suitable for curtains, upholstery and soft furnishings..</p>
-					    <a href="http://muslin.in/sanderson/" class="btn btn-primary">Go somewhere</a>
+					    <p class="card-text">It is a gateway to India’s four distinct forests reserves – Dudhwa, Katarniaghat, Kishanpur and Pilibhit. Within close proximity of the Dudhwa Tiger Reserve, the lodge is a witness to the long-standing Bengal Tiger conservation programme – ‘Project Tiger’ championed by well-known conservationist, Billy Arjan Singh. It is home to few critically endangered species like the Indian one-horned rhinoceros, ganges river dolphins and fishing cats.  Dudhwa being one of the most biodiverse regions and endangered ecosystems in India is home to 38 species of mammals, 90 species of fish, and some 500 species of birds in addition to half of the world’s 4,000 swamp deer, Indian crocodile, wild elephants and one of the best places in the world for seeing the gharial in its natural habitat</p>
+					    <a href="https://www.tutc.com/jaagir-lodge-dudhwa" class="btn btn-primary">Go somewhere</a>
 
   					</div>
 				</div>
@@ -51,7 +51,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Dudhwa National Park</h5>
 						<p class="card-text">The Dudhwa Tiger Reserve is a protected area in Uttar Pradesh that stretches mainly across the Lakhimpur Kheri and Bahraich districts and comprises the Dudhwa National Park, Kishanpur Wildlife Sanctuary and Katarniaghat Wildlife Sanctuary. It covers an area of 1,284.3 km (495.9 sq mi) and includes three large forest fragments amidst the matrix dominated by agriculture. It shares the north-eastern boundary with Nepal, which is defined to a large extent by the Mohana River. The area is a vast alluvial floodplain traversed by numerous rivers and streams flowing in south-easterly direction. It ranges in altitude from 110 to 185 m (361 to 607 ft).</p>
-						<a href="http://muslin.in/sanderson/" class="btn btn-primary">Go somewhere</a>
+						<a href="http://www.dudhwanationalpark.in/" class="btn btn-primary">Go somewhere</a>
 
 					</div>
 				</div>
